			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: handling errors from thebn handler of call_cleanup/3.  Bart
    Demoen and Marek Winkler.

  * FIXED: wrong error and possible crash if format/3 finds an illegal ~
    sequence.   Pierpaolo Bernardi.

===============================
VERSION 5.6.12 (April 18, 2006)
===============================

  * FIXED: Possible crash in call-back from C due to wrong timing of stack
    allocation.  Very old bug.  Affects all versions and all programs,
    though XPCE applications are extra vulnerable due to frequent call-backs.
    Jochem Liem.

===============================
VERSION 5.6.11 (April 11, 2006)
===============================

  * FIXED/MODIFIED: function truncate/1 to return an integer instead of
    a float.  Graham Thwaites.

  * MODIFIED: portray_clause/1,2 and write_canonical/1,2 print singleton
    variables as _ and write_canonical/1,2 prints its variables as A, B, ...
    Paulo Moura.

  * ADDED: Option 'singletons(true)' to numbervars/4 to bind singleton
    variables to '$VAR'('_').

  * FIXED: Bug#163: make XREF aware of format_predicate directives.  Holger
    Kanwischer.

===============================
VERSION 5.6.10 (April 06, 2006)
===============================

  * FIXED: mutex_destroy/1.  Lukas Degener.

  * FIXED: online help without XPCE.  Also some cleanup of the online
    help module.  Sergey Tikhonov.

  * FIXED: XREF: avoid showing XPCE internal predicates.  Fixed import
    into module files doing M:G calls.

  * DOC: Many typos fixed in the documentation by Paulo Moura.  Thanks!

  * FIXED/MODIFIED: thread_send_message/2, thread_get_message/2,
    thread_peek_message/2 and message_queue_size/2 now raise an exception