@@ -7,6 +7,11 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: library(url), www_form_encode/2 to perform UTF-8 based Unicode
+    encoding and decoding.
+
+  * ADDED: library(utf8): provide encoding and decoding of UTF-8 strings.
+
   * FIXED: handling errors from thebn handler of call_cleanup/3.  Bart
     Demoen and Marek Winkler.
 
